# lazy-mmdb

./: .env.example  Cargo.toml  README.md
src/: api.rs  config.rs  db_updater.rs  main.rs
