[package]
name = "lazy-mmdb"
version = "1.0.5"
edition = "2024"
description = "A zero-maintenance, self-updating GeoIP lookup server that provides a fast query API over a Unix Domain Socket."
license = "MIT"
repository = "https://github.com/canmi21/lazy-mmdb"
readme = "README.md"
keywords = ["network", "server", "unix", "socket", "mmdb"]
categories = ["network-programming", "web-programming", "development-tools"]

[[bin]]
name = "lazy-mmdb"
path = "src/main.rs"

[dependencies]
dirs = "6"
dotenvy = "0.15"
fancy-log = "0.1"
lazy-motd = "1"
lazy-sock = "1"
maxminddb = "0.26"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }